Add YAML support and refactor file parsing logic
Introduced a Parser class to handle both JSON and YAML file parsing, refactored Differ to use Parser, and updated tests to cover YAML files and edge cases. Resource files and test cases were reorganized and expanded for better coverage and clarity.